[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/PlayerSelection/PlayerSelectionBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PlayerSelection.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[node name="PlayerSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1250.0
margin_bottom = -680.0
rect_min_size = Vector2( 600, 220 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 220 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorRect" parent="Player"]
margin_right = 600.0
margin_bottom = 220.0
rect_min_size = Vector2( 600, 220 )
color = Color( 0.486275, 0.486275, 0.486275, 1 )

[node name="GridContainer" type="GridContainer" parent="Player/Color"]
margin_right = 600.0
margin_bottom = 220.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Player/Color/GridContainer"]
margin_right = 280.0
margin_bottom = 220.0
rect_min_size = Vector2( 280, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player/Color/GridContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 280.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "Jogador"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="Player/Color/GridContainer"]
margin_left = 284.0
margin_right = 604.0
margin_bottom = 220.0
rect_min_size = Vector2( 320, 220 )
alignment = 1

[node name="PlayerSelectionBox" parent="Player/Color/GridContainer/Buttons" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 210.0

[connection signal="pressed" from="Player/Color/GridContainer/Buttons/PlayerSelectionBox/Player/ColorRect/ButtonsPlayerSelection/PlayerSelectionButton" to="." method="_on_PlayerSelectionButton_pressed"]
[connection signal="pressed" from="Player/Color/GridContainer/Buttons/PlayerSelectionBox/Player/ColorRect/ButtonsPlayerSelection/IAButton" to="." method="_on_IaSelectionButton_pressed"]
[connection signal="pressed" from="Player/Color/GridContainer/Buttons/PlayerSelectionBox/Player/ColorRect/ButtonsPlayerSelection/IAButton" to="." method="_on_IaButton_pressed"]
[connection signal="pressed" from="Player/Color/GridContainer/Buttons/PlayerSelectionBox/Player/ColorRect/ButtonsPlayerSelection/DesativadoButton" to="." method="_on_DisabledSelectionButton_pressed"]

[editable path="Player/Color/GridContainer/Buttons/PlayerSelectionBox"]
